--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,35 +7,60 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Cache Maven dependencies
-      uses: actions/cache@v1
+    - name: Checkout
+      uses: actions/checkout@v2
       with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/project.clj') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    - name: Install dependencies
-      run: |
-        lein deps
-        lein webly npm-install
-    - name: Check formatting
-      run: lein cljfmt check
-    - name: Run tests clj
-      run: |
-        lein test
-    - name: Run tests cljs
-      run: |
-        lein test-js
+        fetch-depth: 0
+    - name: Use Node.js 12.x
+      uses: actions/setup-node@v1
+      with:
+        node-version: 12.x
+    - name: Prepare java
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'zulu' # https://github.com/actions/setup-java/blob/main/README.md#Supported-distributions
+        java-version: '14'
+        java-package: jdk # optional (jdk or jre) - defaults to jdk
+    - name: Install clojure tools
+      uses: DeLaGuardo/setup-clojure@3.5
+      with:
+        cli: 1.10.3.882 # Clojure CLI based on tools.deps
+    - name: test-clj
+      run: clojure -M:test
+    - name: clj-fmt
+      run: clojure -M:cljfmt
+      shell: bash
+    - name: test-cljs
+      run: ./script/test-cljs.sh
+    #- name: show git tag
+    #  run: clojure -M:garamond
+    #- name: clj-kondo
+    #  run: clojure -M:lint
+    #- name: cloverage
+    #  run: clojure -M:cloverage
     - name: Release
+      if: success()
+      # if: github.event_name == 'push'
       env:
-        RELEASE_USERNAME: ${{ secrets.ReleaseUsername }}
-        RELEASE_PASSWORD: ${{ secrets.ReleasePassword }}
+        CLOJARS_USERNAME: ${{ secrets.ReleaseUsername }}
+        CLOJARS_PASSWORD: ${{ secrets.ReleasePassword }}
+        CODECOV_TOKEN: ${{ secrets.CodecovToken }}
       run: |
         git config --global user.email "ci@pinkgorilla.org"
         git config --global user.name "CI/CD"
-        lein release
+        clojure -M:release --patch
+        git push --tags
+      #  clojure -M:release tag --minor
+      #  clojure -M:release pom
+      #  clojure -M:release jar
+      # clojure -M:release deploy
+      # lein release
+      # bash <(curl -s https://codecov.io/bash)
+      # lein with-profile +relay-jetty cloverage
+      #  bash <(curl -s https://codecov.io/bash) -f target/coverage/codecov.json
+      #
+      # Could not transfer metadata foo:bar/maven-metadata.xml from/to releases (https://clojars.org/repo): Read timed out
+      # Default 10000 not enough for us
+      # export LEIN_JVM_OPTS="-Dmaven.wagon.rto=90000"
